--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -6,8 +6,8 @@ template(name='nav')
         if connected
             a.icon.item(href='/')
                 i.big.yin.yang.icon
-            a.icon.item(href='/stack')
-                i.large.stack.exchange.icon
+            a.icon.item(href='/stack' data-tab='groups')
+                i.large.stack.fire.icon
             a.icon.item(href='/users')
                 i.large.users.icon
             a.icon.disabled.item(href='/youtube')
