working import and showing user_tags

--- a/parts/client/stack_user.jade
+++ b/parts/client/stack_user.jade
@@ -73,7 +73,7 @@ template(name='stackuser_page')
                         |tags
                     .ui.list
                         each user_tags
-                            .item #{title}
+                            .item #{name}: #{count}
                 .four.wide.column
                     .ui.header.get_answers
                         i.exclamation.icon
