--- a/parts/client/stack_site.jade
+++ b/parts/client/stack_site.jade
@@ -76,21 +76,24 @@ template(name='site_page')
                     //     i.th.icon
                     // .ui.icon.compact.large.button 
                     //     i.list.icon
-                    .ui.selection.link.large.list
+                    .ui.selection.link.large.list.medscroll
                         each site_questions
                             a.item.view_question(href="/site/#{site}/doc/#{_id}")
                                 // if watson.metadata.image
                                 //     img.ui.avatar.invert.image(src=watson.metadata.image)    
-                                .content 
-                                    .header !{title}
+                                .content
+                                    .header !{title} 
+                                        .ui.label #{score}
                                     // if skv_is 'view_detail' true
                                     each tags
                                         .ui.small.label #{this}
                                     .ui.horizontal.list
                                         // |#{_when}
-                                        .item updated {{from_now last_edit_date}}
-                                        .item created {{from_now creation_dat}}
-                                        
+                                        if last_edit_date
+                                            .item updated {{ufrom last_edit_date}}
+                                        if creation_dat
+                                            .item created {{ufrom creation_dat}}
+                                    +doc_emotion_small
                                     
                 // .four.wide.column
                 //     .ui.circular.icon.button.vote_up
