make sites home, working cloud on top of sites, hide dummy icons

--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -419,21 +419,21 @@ template(name='tone')
                 //- span #{sentence_id}
                 span.tone_item.ui.zoomer.pointer.text(title="#{sentence_id}" class="#{tone_size} #{sentence_color}") 
                     |{{lowered text}}
-                    // .content
-                    // .inline.header(title="#{sentence_id}") {{lowered text}}
-                    // |weight:#{weight}
-                    // i.chevron.up.link.grey.large.icon.upvote_sentence
-                    // i.chevron.down.link.grey.large.icon.downvote_sentence
-                    // each tones
-                    //     .ui.inverted.invert.small.compact.label(class="#{tone_label_class}") 
-                    //     .ui.small.compact.inverted.label(class="{{calculated_size 'weight'}} #{tone_label_class}") 
-                    //         span.ui.text
-                    //             |#{tone_id} &nbsp;
-                    //         | {{ to_percent score }}% 
-                    // .ui.mini.transparent.icon.input
-                    //     input.tag_sentence(type='text' placeholder='tag')
-                    // each tags 
-                    //     .ui.label #{this}
+                    .content
+                        .inline.header(title="#{sentence_id}") {{lowered text}}
+                        |weight:#{weight}
+                        i.chevron.up.link.grey.large.icon.upvote_sentence
+                        i.chevron.down.link.grey.large.icon.downvote_sentence
+                        each tones
+                            .ui.inverted.invert.small.compact.label(class="#{tone_label_class}") 
+                            .ui.small.compact.inverted.label(class="{{calculated_size 'weight'}} #{tone_label_class}") 
+                                span.ui.text
+                                    |#{tone_id} &nbsp;
+                                | {{ to_percent score }}% 
+                        .ui.mini.transparent.icon.input
+                            input.tag_sentence(type='text' placeholder='tag')
+                        each tags 
+                            .ui.label #{this}
     // unless tone                
     //- #call_tone.ui.icon.button
     //-     i.refresh.icon
