--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -182,6 +182,13 @@ html.ios body {
 	box-shadow       : 0 0 5px grey;
 }
 
+.accepted {
+	background-color : blue;
+	box-shadow       : 0 0 5px grey;
+  filter: drop-shadow(0px 0px 5px pink);    
+	
+}
+
 
 .segment:not(.pushable) {
   transition: height .25s linear;
