--- a/parts/client/stack_page.jade
+++ b/parts/client/stack_page.jade
@@ -17,6 +17,14 @@ template(name='stack_page')
                         i.external.large.icon
             .row
                 .four.wide.column
+                    +doc_emotion
+                    // i.big.refresh.circular.link.icon.get_question
+                    // i.big.exclamation.circular.link.icon.get_answers
+                    // +skve k='stack_section' v='main' l='content' i='content' 
+                    unless watson
+                        .ui.big.fluid.button.call_watson
+                            i.large.brain.icon
+                            |analyze
                     each tags 
                         a.ui.basic.large.pointer.label.add_stack_tag #{this}
                     if is_answered
@@ -56,16 +64,8 @@ template(name='stack_page')
                     +voting
                     +print_this
                     +doc_sentiment
-                    +doc_emotion
-                    // i.big.refresh.circular.link.icon.get_question
-                    // i.big.exclamation.circular.link.icon.get_answers
-                    // +skve k='stack_section' v='main' l='content' i='content' 
-                    unless watson
-                        .ui.big.fluid.button.call_watson
-                            i.large.brain.icon
-                            |analyze
                     
-                .twelve.wide.column
+                .twelve.wide.column.scrolling
                     // div(class=currentUser.invert_class)
                     .f12 !{body}
                     .ui.dividing.header.get_question_comments
@@ -90,7 +90,7 @@ template(name='stack_page')
                                     a(href=link) #{link}
                             |#{content_license}
                             +voting
-                            +comments
+                            // +comments
                     
                     
                     each question_answers
@@ -111,8 +111,8 @@ template(name='stack_page')
                                     |#{accept_rate}
                                     a(href=link) #{link}
                             |#{content_license}
-                            +voting
-                            +comments
+                            // +voting
+                            // +comments
                     +skve k='stack_section' v='watson' l='watson' i='brain' 
                     if tone
                         +skve k='stack_section' v='tone' l='tone' i='user' 
@@ -129,7 +129,7 @@ template(name='stack_page')
                                 |analyze tone
                             +watson_view
                             +watson_full
-                    +comments
+                    // +comments
 
         
             
