--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -27,47 +27,47 @@ template(name='nav')
             .item
                 i.yin.yang.loading.big.icon
                 +status    
-        .right.menu
-            if currentUser
-                if connected
-                    a.icon.pointer.item.add(title='add')
-                        i.large.plus.icon
-                // if currentUser
-                //     a.pointer.icon.disabled.item.toggle_friends(href="#" class=alert_toggle_class title='friends')
-                //         i.large.users.icon
-                //     a.pointer.icon.disabled.item.toggle_bookmarks(href="#" class=alert_toggle_class title='bookmark')
-                //         i.large.bookmark.icon
-                //     if connected
-                //         if unread_count
-                //             a.pointer.disabled.item.alerts(href="#" class=alert_toggle_class)
-                //                 i.large.bell.icon
-                //                 if unread_count
-                //                     |#{unread_count}
-                //         else
-                //             // a.icon.pointer.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-                //             a.icon.pointer.disabled.item(href="/inbox")
-                //                 i.large.outline.bell.icon
-                // a.icon.pointer.disabled.item(href="/chat" title='chat') 
-                //     i.chat.outline.large.icon
-                // a.icon.pointer.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+        // .right.menu
+        //     if currentUser
+        //         if connected
+        //             a.icon.pointer.item.add(title='add')
+        //                 i.large.plus.icon
+        //         // if currentUser
+        //         //     a.pointer.icon.disabled.item.toggle_friends(href="#" class=alert_toggle_class title='friends')
+        //         //         i.large.users.icon
+        //         //     a.pointer.icon.disabled.item.toggle_bookmarks(href="#" class=alert_toggle_class title='bookmark')
+        //         //         i.large.bookmark.icon
+        //         //     if connected
+        //         //         if unread_count
+        //         //             a.pointer.disabled.item.alerts(href="#" class=alert_toggle_class)
+        //         //                 i.large.bell.icon
+        //         //                 if unread_count
+        //         //                     |#{unread_count}
+        //         //         else
+        //         //             // a.icon.pointer.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+        //         //             a.icon.pointer.disabled.item(href="/inbox")
+        //         //                 i.large.outline.bell.icon
+        //         // a.icon.pointer.disabled.item(href="/chat" title='chat') 
+        //         //     i.chat.outline.large.icon
+        //         // a.icon.pointer.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
                     
-            if currentUser
-                a.large.pointer.item(href="/u/#{currentUser.username}" )
-                    //- i.large.user.large.icon
-                    // |{{money_format currentUser.points}}c
-                    |#{currentUser.points}p
-                    |&nbsp;
-                    if currentUser.profile_image_id
-                        img.ui.avatar.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                    else 
-                        i.large.user.large.icon
-                    strong.mobile.hidden #{currentUser.username}
-                // a.icon.large.item.toggle_rightbar
-                //     i.bars.large.grey.icon
-            else
-                a.pointer.item(href="/login" title='login')
-                    i.large.sign.in.icon
-                    // |enter
+        //     // if currentUser
+        //     //     a.large.pointer.item(href="/u/#{currentUser.username}" )
+        //     //         //- i.large.user.large.icon
+        //     //         // |{{money_format currentUser.points}}c
+        //     //         |#{currentUser.points}p
+        //     //         |&nbsp;
+        //     //         if currentUser.profile_image_id
+        //     //             img.ui.avatar.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+        //     //         else 
+        //     //             i.large.user.large.icon
+        //     //         strong.mobile.hidden #{currentUser.username}
+        //     //     // a.icon.large.item.toggle_rightbar
+        //     //     //     i.bars.large.grey.icon
+        //     // else
+        //     //     a.pointer.item(href="/login" title='login')
+        //     //         i.large.sign.in.icon
+        //     //         // |enter
     // if skv_is 'viewing_alerts' true
     //     +topbar
     // else if skv_is 'viewing_bookmarks' true
