--- a/client/stack_site.jade
+++ b/client/stack_site.jade
@@ -36,8 +36,8 @@ template(name='site_page')
                         // .item #{api_site_parameter} api_site_parameter
                         // .item #{site_type} site_type
                     +array_edit k='tags' d=true
-                    +comments
-                    +voting_full
+                    // +comments
+                    // +voting_full
                 .twelve.wide.column
                     if selected_tags
                         // if many_tags
