--- a/client/s.css
+++ b/client/s.css
@@ -18,11 +18,11 @@ body {
   width: inherit !important;
 }
 
-.invert > p {
-  color:white !important;
+/*.invert > p {*/
+/*  color:white !important;*/
   /*filter: invert(1) !important; */
   
-} 
+/*} */
 
 
 .tone_item {
@@ -405,9 +405,9 @@ a.title, #title {
     /*border-radius: 10px !important;*/
 }
 
-.invert{
-  filter: invert(1) !important; 
-}
+/*.invert{*/
+/*  filter: invert(1) !important; */
+/*}*/
 .left.floated{
     margin:3px !important;
 }
