--- a/client/stack.jade
+++ b/client/stack.jade
@@ -13,7 +13,7 @@ template(name='stack')
                 // .ui.header.dl 
                 //     i.globe.icon
                 //     |sites
-                .ui.center.five.stackable.cards
+                .ui.center.six.stackable.cards
                     each site_docs
                         a.ui.card(href="/site/#{api_site_parameter}")
                             img.ui.image(src=icon_url class=currentUser.invert_class)
